k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gist-api-service
spec:
  selector:
    app: gist-api
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
